  * Reimplemented internals of scenario / step execution code
  * Removed optional enabling of commenting feature and other basic features and made them always enabled
  * Rework how `LightBDDConfiguration` and `IntegrationContext` is being passed to framework and implementations
  * Removed `DebuggerStepThrough` attributes
+ #152 (VSIX) Updated templates and snippets
+ #152 (All) Updated logo
+ #174 Allowed IgnoreScenarioAttribute on class level to ignore all scenarios in feature

Version 2.5.0
----------------------------------------
Summary:
+ #60 (VSIX)(New) Implemented Project Templates in VSIX extension
+ #61 (VSIX)(New) Implemented snippets for scenario and composite steps in VSIX extension
+ #148 (Framework)(Fix) Expect.To.BeAnyTrue<T>() with no sub-expectations should fail
+ #153 (LightBDD.XUnit2)(Examples) Updated dotnet test examples for xunit2 to reflect the newest framework changes
+ #156 (Framework)(New) Implemented compact step syntax allowing inline step definitions
+ #160 (LightBDD.Fixie2)(Change) Updated Fixie dependency to v2.0.2 to detect tests in VS 15.8 and higher

Version 2.4.3
----------------------------------------
Summary:
+ #145 (LightBDD.Core)(Fix) NULL value not assignable to Nullable<bool> parameter

Version 2.4.2
----------------------------------------
Summary:
+ #127 (LightBDD.Core)(Fix) Fixed FeatureRunnerRepository to instantiate FeatureRunner once per feature type
+ #128 (LightBDD.MsTest2)(Change) Updated progress notifiers to work with scenarios executed in parallel
+ #134 (LightBDD.Framework)(New) Added State<T> helper struct managing uninitialized shared state fields
+ #135 (all)(New) Added sourcelink integration to all packages
+ #137 (LightBDD.Framework)(Bug) Unable to specify absolute path to report location on Linux

Version 2.4.1
----------------------------------------
Summary:
+ #122 (LightBDD.Extensions.DependencyInjection)(New) Provided integration with DI containers implementing Microsoft DI abstractions