@@ -1,7 +1,9 @@
 ﻿using System;
 using System.Linq.Expressions;
+using System.Reflection;
+using System.Runtime.CompilerServices;
 
-namespace LightBDD.Framework.Parameters.Implementation
+namespace LightBDD.Framework.Implementation
 {
     internal static class Reflector
     {
@@ -10,6 +12,15 @@ namespace LightBDD.Framework.Parameters.Implementation
             if (columnExpression.Body is MemberExpression memberExpression)
                 return memberExpression.Member.Name;
             throw new InvalidOperationException($"Expected {nameof(columnExpression)} to be member expression, got: {columnExpression}");
+        }
+
+        public static bool IsGenerated(MemberInfo methodInfo)
+        {
+            if (methodInfo.IsDefined(typeof(CompilerGeneratedAttribute)))
+                return true;
+            if (methodInfo.DeclaringType != null)
+                return IsGenerated(methodInfo.DeclaringType.GetTypeInfo());
+            return false;
         }
     }
 }
